deploy/kustomize/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    version: ${VERSION}
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: ${VERSION}
    spec:
      containers:
        - name: frontend
          image: ${TARGET_IMAGE}
          ports:
            - name: http
              containerPort: 9080
