deploy/kustomize/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http-9080
      port: 9080
      targetPort: 9080
  selector:
    app: frontend
