deploy/kustomize/frontend/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
      - uri:
          prefix: /sayHello
    - route:
      - destination:
          host: frontend
          subset: ${VERSION}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
    - name: ${VERSION}
      labels:
        version: ${VERSION}
